--- a/myhtml5.html
+++ b/myhtml5.html
@@ -8,5 +8,7 @@
 <body>
 
     <textarea id="TextArea1" rows="2" cols="20">hello from Malaysia</textarea>
+
+    <input id="Button1" type="button" value="click me" />
 </body>
 </html>
